--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       },
     };
     </script>
-    <script src="app.js"></script>
+    <script src="https://cdn.rawgit.com/Pjotr17/parsim/master/app.js"></script>
   </body>
 </html>
